--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,4 +1,17 @@
-<!DOCTYPE html>
+
+<form action="http://www.html.am/html-codes/textboxes/submitted.cfm">
+
+<textarea name="myTextBox" cols="50" rows="5" style="background-color:#FCF5D8;color:#AD8C08;">
+
+Enter some text...
+
+</textarea>
+
+<br />
+
+<input type="submit" />
+
+</form><!DOCTYPE html>
 <html lang="en-us">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
